--- a/layout/gui/WithdrawalsMain.fxml
+++ b/layout/gui/WithdrawalsMain.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="outgoingsVBox" nodeOrientation="RIGHT_TO_LEFT" spacing="10.0" visible="false" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.OutgoingsMainController">
+<VBox fx:id="WithdrawalsVBox" nodeOrientation="RIGHT_TO_LEFT" spacing="10.0" visible="false" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.WithdrawalsMainController">
     <children>
         <HBox spacing="5.0">
             <children>
@@ -16,18 +16,18 @@
                         <Font name="System Bold" size="15.0" />
                     </font>
                 </Label>
-                <DatePicker fx:id="dpOutgoings" />
+                <DatePicker fx:id="dpWithdrawals" />
                 <AnchorPane prefHeight="25.0" prefWidth="100.0" />
                 <Label layoutX="10.0" layoutY="10.0" text="نوع العرض">
                     <font>
                         <Font name="System Bold" size="15.0" />
                     </font>
                 </Label>
-                <ComboBox fx:id="cboxOutgoingsViewStyle" prefHeight="25.0" prefWidth="122.0" visibleRowCount="3" />
-                <Button fx:id="btnOutgoingsView" mnemonicParsing="false" onAction="#btnOutgoingsViewOnAction" text="عرض" />
+                <ComboBox fx:id="cboxWithdrawalsViewStyle" prefHeight="25.0" prefWidth="122.0" visibleRowCount="3" />
+                <Button fx:id="btnWithdrawalsView" mnemonicParsing="false" onAction="#btnWithdrawalsViewOnAction" text="عرض" />
             </children>
         </HBox>
-        <TableView fx:id="tableOutgoings" VBox.vgrow="ALWAYS">
+        <TableView fx:id="tableWithdrawals" VBox.vgrow="ALWAYS">
             <columnResizePolicy>
                 <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
             </columnResizePolicy>
@@ -40,8 +40,8 @@
         </TableView>
         <HBox alignment="CENTER_LEFT" spacing="8.0">
             <children>
-                <Label text="إجمالى المصروفات" />
-            <TextField fx:id="txtTotalOutgoings" editable="false" />
+                <Label text="إجمالى الوارد" />
+            <TextField fx:id="txtTotalWithdrawals" editable="false" />
             </children>
             <padding>
                 <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
