--- a/layout/gui/StatisticsMain.fxml
+++ b/layout/gui/StatisticsMain.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.*?>
 
 
-<VBox fx:id="statisticsVBox" prefHeight="513.0" prefWidth="572.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.StatisticsMainController">
+<VBox fx:id="statisticsVBox" prefHeight="513.0" prefWidth="572.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.StatisticsMainController">
    <children>
       <ScrollPane hbarPolicy="NEVER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="200.0" prefWidth="200.0" vvalue="1.0" VBox.vgrow="ALWAYS">
          <content>
