--- a/layout/gui/TpsWindow.fxml
+++ b/layout/gui/TpsWindow.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 
-<BorderPane minHeight="500.0" minWidth="800.0" nodeOrientation="RIGHT_TO_LEFT" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.MainController">
+<BorderPane minHeight="500.0" minWidth="800.0" nodeOrientation="RIGHT_TO_LEFT" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.TpsWindowController">
    <bottom>
       <ToolBar BorderPane.alignment="CENTER">
         <items>
