--- a/layout/gui/WithdrawalsMain.fxml
+++ b/layout/gui/WithdrawalsMain.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="WithdrawalsVBox" nodeOrientation="RIGHT_TO_LEFT" spacing="10.0" visible="false" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.WithdrawalsMainController">
+<VBox fx:id="WithdrawalsVBox" nodeOrientation="RIGHT_TO_LEFT" spacing="10.0" visible="false" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.WithdrawalsMainController">
     <children>
         <HBox spacing="5.0">
             <children>
