--- a/layout/gui/StatisticsMain.fxml
+++ b/layout/gui/StatisticsMain.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.shape.*?>
 <?import javafx.scene.*?>
@@ -7,27 +8,63 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<VBox fx:id="statisticsVBox" prefHeight="513.0" prefWidth="572.0" spacing="10.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.StatisticsMainController">
-   <children>
-      <ScrollPane hbarPolicy="NEVER" nodeOrientation="RIGHT_TO_LEFT" prefHeight="200.0" prefWidth="200.0" vvalue="1.0" VBox.vgrow="ALWAYS">
-         <content>
-            <Pane>
+<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" nodeOrientation="RIGHT_TO_LEFT" prefHeight="695.0" prefWidth="788.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8">
+  <content>
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="433.0" prefWidth="761.0">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="10.0" VBox.vgrow="ALWAYS">
                      <children>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
-                           <children>
-                              <Label text="Label" />
-                              <DatePicker />
-                              <Label layoutX="10.0" layoutY="10.0" text="Label" />
-                           </children>
-                        </HBox>
+                        <Label text="التاريخ" />
+                        <DatePicker />
+                        <Label layoutX="10.0" layoutY="10.0" text="نوع العرض">
+                           <padding>
+                              <Insets left="10.0" />
+                           </padding>
+                        </Label>
+                        <ComboBox prefHeight="25.0" prefWidth="114.0" />
                      </children>
-                  </VBox>
+                     <padding>
+                        <Insets bottom="25.0" left="30.0" right="3.0" top="10.0" />
+                     </padding>
+                  </HBox>
+                  <StackedBarChart>
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis side="LEFT" />
+                    </yAxis>
+                  </StackedBarChart>
+                  <HBox alignment="CENTER_LEFT" prefHeight="115.0" prefWidth="592.0" spacing="10.0">
+                     <children>
+                        <Label text="المبيعات" />
+                        <TextField editable="false" />
+                        <Label layoutX="13.0" layoutY="59.0" text="الوارد" />
+                        <TextField editable="false" layoutX="67.0" layoutY="55.0" />
+                        <Label layoutX="226.0" layoutY="59.0" text="المشتريات" />
+                        <TextField editable="false" layoutX="263.0" layoutY="55.0" />
+                     </children>
+                     <padding>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </padding>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="115.0" prefWidth="592.0" spacing="10.0">
+                     <children>
+                        <Label text="المصروفات " />
+                        <TextField editable="false" />
+                        <Label layoutX="13.0" layoutY="59.0" text="المسحوبات" />
+                        <TextField editable="false" layoutX="67.0" layoutY="55.0" />
+                        <Label layoutX="241.0" layoutY="59.0" text="الرصيد" />
+                        <TextField editable="false" layoutX="307.0" layoutY="55.0" />
+                     </children>
+                     <padding>
+                        <Insets bottom="3.0" left="3.0" right="3.0" top="3.0" />
+                     </padding>
+                  </HBox>
                </children>
-            </Pane>
-         </content>
-      </ScrollPane>
-   </children>
-</VBox>
+            </VBox>
+         </children></AnchorPane>
+  </content>
+</ScrollPane>
